# n8n-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  FILTERING.md  LICENSE  QUICKSTART.md  README.md  RETRY_IMPLEMENTATION.md  RETRY_QUICKSTART.md  VALIDATION_README.md  WEBHOOK_TOOLS.md  agent-card.json  docker-compose.yaml  env.example  gitignore  index.js  package.json  pyproject.toml
.github/workflows/: ci.yml  dependency-update.yml  security.yml
src/n8n_mcp_server/: __init__.py  a2a_server.py  models.py
tests/: __init__.py  conftest.py  test_error_handling.py  test_executions.py  test_retry_logic.py  test_security.py  test_validation.py  test_webhooks.py  test_workflows.py
