[project]
name = "n8n-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for n8n API integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
n8n-mcp-server = "n8n_mcp_server:main"
